Implement Monad for boxed Future
Added `Monad` implementation for `Pin<Box<dyn 'a + Send + Future>>`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ description = "Functors in Rust"
 repository = "https://github.com/JanBeh/fmap"
 license = "MIT OR Apache-2.0"
 keywords = ["functor"]
+
+[dev-dependencies]
+futures = "0.3.28"
